<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_nav_alarm"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/nav_menu_alarm"/>

        <item
            android:id="@+id/id_nav_reminder"
            android:icon="@drawable/ic_menu_reminder"
            android:title="@string/nav_menu_reminder"/>

        <item
            android:id="@+id/id_nav_todo"
            android:icon="@drawable/ic_menu_todo"
            android:title="@string/nav_menu_todo"/>

        <item
            android:id="@+id/id_nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/nav_menu_notes"/>

        <item
            android:id="@+id/id_nav_timetable"
            android:icon="@drawable/ic_menu_timetable"
            android:title="@string/nav_menu_timetable"/>

        <item
            android:id="@+id/id_nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/nav_menu_calculator"/>

        <item
            android:id="@+id/id_nav_barcode"
            android:icon="@drawable/ic_menu_barcode"
            android:title="@string/nav_menu_barcode"/>

        <item
            android:id="@+id/id_nav_recorder"
            android:icon="@drawable/ic_menu_recorder"
            android:title="@string/nav_menu_recorder"/>

        <item
            android:id="@+id/id_nav_converter"
            android:icon="@drawable/ic_menu_converter"
            android:title="@string/nav_menu_converter"/>

        <item
            android:id="@+id/id_nav_password"
            android:icon="@drawable/ic_menu_key"
            android:title="@string/nav_menu_password"/>

        <item
            android:id="@+id/id_nav_shop"
            android:icon="@drawable/ic_menu_shop"
            android:title="@string/nav_menu_shop"/>
    </group>

    <item android:title="Support">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
